2回コミット

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
             <div class="profile-body">
               <p>
                 鈴木寿男<br>1973年生まれ<br>北海道河東郡上士幌町出身
-                <br>OS：Windows10<br>ツール：Photoshop/Visual Studio Code/WordPress/Figma/canva
-                <br>IT資格：ITパスポート　情報セキュリティマネジメント
+                <br>【使用OS】<br>・Windows10<br>【使用可能ツール】<br>・Visual Studio Code<br>・WordPress<br>・Adobe Photoshop<br>・Figma<br>・canva
+                <br>【IT資格】<br>・ITパスポート<br>・情報セキュリティマネジメント
               </p>
               <p>
                 札幌市在住。2004年より20年間医療業界でサポートエンジニア職として務めております。将来的な働き方への変化を問うようになり一念発起しプログラミングスクールを受講。HTML/CSS、Photoshop、WordPressなどの学習を経てWebサイト制作を副業としております。シンプル且つわかりやすいデザインをお届け致します。
